@@ -1,3 +1,4 @@
+Find resolvconf in path instead of /sbin.
 make HAVE_FORK=yes|no should be used if cross compiling.
 Implement an exponential NAK backoff.
 Clear the signal_pipe fd from the fdset when all signals have
